Apply the PyKrita workaround to Qt 5.12

This should've been done previously but it was marked as UPSTREAM.

BUG: 417465