plugins/extensions/pykrita/plugin/plugin.cpp
@@ -78,9 +78,9 @@ KritaPyQtPlugin::KritaPyQtPlugin(QObject *parent, const QVariantList &)
 
 KritaPyQtPlugin::~KritaPyQtPlugin()
 {
-    // XXX: With Qt 5.14, this crashes Krita on exit. See https://bugs.kde.org/show_bug.cgi?id=417465
+    // XXX: With Qt 5.14 (or 5.12 but with an updated PyQt) this crashes Krita on exit. See https://bugs.kde.org/show_bug.cgi?id=417465
     //      So, for now, we just don't call finalize...
-#if QT_VERSION < QT_VERSION_CHECK(5,14,0)
+#if QT_VERSION < QT_VERSION_CHECK(5,12,0)
     PyKrita::finalize();
 #endif
 }
